--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -48,7 +48,7 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest  # For a list of available runner types, refer to
+    runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
@@ -60,7 +60,6 @@ jobs:
     steps:
     - name: ENV
       run: |
-        echo "Time_Tick=$(Get-Date -Format 'yyyyMMddHHmm')"
-        echo "Time_Tick=$(Get-Date -Format 'yyyyMMddHHmm')" >> $GITHUB_ENV
+        echo "Time_Tick=$(Get-Date -Format 'yyyyMMddHHmm')" | Out-File -FilePath $env:GITHUB_ENV -Append # no need for -Encoding utf8
         echo "$env:Time_Tick"
         echo ${{ env.Time_Tick }}
