--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,8 +58,16 @@ jobs:
       Wap_Project_Path: your-wap-project-path                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
+    - name: Set the value
+      id: step_one
+      run: |
+        echo "action_state=yellow" | Out-File -FilePath $env:GITHUB_ENV -Append # no need for -Encoding utf8
+    - name: Use the value
+      id: step_two
+      run: |
+        echo "${{ env.action_state }}" # This will output 'yellow'
     - name: ENV
       run: |
-        echo "Time_Tick=$(Get-Date -Format 'yyyyMMddHHmm')" | Out-File -FilePath $env:GITHUB_ENV -Append
-        echo ${{ env.Time_Tick }}
-        echo "$env:Time_Tick"
+        echo "time_tick=$(Get-Date -Format 'yyyyMMddHHmm')" | Out-File -FilePath $env:GITHUB_ENV -Append
+        echo "${{ env.time_tick }}"
+        echo "$env:time_tick"
